[package]
authors = ["vyfor"]
categories = ["command-line-utilities"]
description = "🚀 The most extensible Discord Rich Presence plugin for Neovim, powered by Rust."
edition = "2021"
keywords = ["discord-rpc", "discord", "rich-presence", "neovim", "plugin"]
license = "Apache-2.0"
name = "cord-nvim"
repository = "https://github.com/vyfor/cord.nvim"
version = "2.0.0-beta.19"
rust-version = "1.85"

[[bin]]
name = "cord"
path = "src/main.rs"

[profile.release]
incremental = true
