[package]
authors = ["vyfor"]
categories = ["command-line-utilities"]
description = "🚀 The most extensible Discord Rich Presence plugin for Neovim, powered by Rust."
edition = "2024"
keywords = ["discord-rpc", "discord", "rich-presence", "neovim", "plugin"]
license = "Apache-2.0"
name = "cord-nvim"
repository = "https://github.com/vyfor/cord.nvim"
version = "2.2.11"
rust-version = "1.89.0"

[[bin]]
name = "cord"
path = "src/main.rs"

[profile.release]
incremental = true
